Ultima mejora y del rendimiento del SEO en mi webiste

--- a/blog.html
+++ b/blog.html
@@ -12,9 +12,9 @@
 
     <!-- ESTILOS LINKS -->
 
-    <link rel="icon" href="img/iconPersonal.png">
-    <link rel="stylesheet" href="styles/generalStyle.css">
-    <link rel="stylesheet" href="styles/templateGrid.css">
+    <link rel="icon" href="./img/iconPersonal.png">
+    <link rel="stylesheet" href="./styles/generalStyle.css">
+    <link rel="stylesheet" href="./styles/templateGrid.css">
 
     <!-- GOOGLE FONTS -->
 
@@ -34,7 +34,7 @@
     <!-- BLOCK HEADER -->
 
     <header class="header">
-        <a href="index.html"><img class="header__image" src="img/cube2.png" alt="cubo one header"></a>
+        <a href="index.html"><img class="header__image" src="./img/cube2.png" alt="cubo one header"></a>
         <h1 class="header__title-principal">Hairton M.</h1>
     </header>
 
@@ -45,7 +45,7 @@
     <!-- BLOCK NAV -->
 
     <nav class="main-menu">
-        <p class="main-menu__switch"><img src="img/icon_plus_menu.svg" alt="icon switch menu" class="main-menu__icon"></p>
+        <p class="main-menu__switch"><img src="./img/icon_plus_menu.svg" alt="icon switch menu" class="main-menu__icon"></p>
 
         <ul class="menu-principal">
             <li class="menu-principal__item"><a class="menu-principal__link" href="index.html">Home</a></li>
@@ -63,7 +63,7 @@
             <article class="article">
                 <h1 class="article__title">Blog Tech</h1>
 
-                <img src="img/icon-blog-tech.png" alt="icon blog tech" class="article__img">
+                <img src="./img/icon-blog-tech.png" alt="icon blog tech" class="article__img">
 
                 <span class="article__intro">
                     En esta sección hablaré acerca de todos los <b class="font-bold">conceptos relacionados a tecnología</b>, pero en especial al <b class="font-bold">Desarrollo Web.</b>
@@ -75,7 +75,7 @@
 
                         <span class="blog-info__autor">
                             <b class="font-bold font-bold--infoBlog">Autor: </b> Hairton Mayhuay &rArr;
-                            <b class="font-bold font-bold--infoBlog">Fecha: </b> --/09/2020
+                            <b class="font-bold font-bold--infoBlog">Fecha: </b> 30/09/2020
                         </span>
 
                         <p class="paragraph paragraph--section-bigDevice">
@@ -113,7 +113,7 @@
                             <b class="font-bold font-bold--infoBlog">Fecha: </b> --/09/2020
                         </span>
 
-                        <img src="img/variables_css_icon.png" alt="variables in the css" class="article__img">
+                        <img src="./img/variables_css_icon.png" alt="variables in the css" class="article__img">
 
                         <p class="paragraph paragraph--section-bigDevice">
                             <b class="font-bold">CSS (Lenguaje de Estilos)</b>, es uno de los lenguajes más importantes dentro de la web, ya que con el podemos dar vida y estilos a nuestra website. Es un lenguaje súper interesante y con mucho potencial.
@@ -142,7 +142,7 @@
                             <b class="font-bold font-bold--infoBlog">Fecha: </b> 13/09/2020
                         </span>
 
-                        <img src="img/arduinoIBoardBlog.png" alt="icon Arduino in my blog" class="article__img">
+                        <img src="./img/arduinoIBoardBlog.png" alt="icon Arduino in my blog" class="article__img">
 
                         <p class="paragraph paragraph--section-bigDevice">
                             <b class="font-bold">Arduino</b> es una plataforma electrónica <b class="font-bold">open-source</b> tanto en hardware como en software. Cuando hablamos de hardware libre y software libre, esto implica en el caso del hardware que las <b class="font-bold">arquitecturas, diseños, planos de los componentes electrónicos</b> son de <b class="font-bold">acceso público</b>. En el caso del software, el <b class="font-bold">código fuente, las especificaciones, métodologias serás de acceso público</b>.
@@ -191,7 +191,7 @@
                             <b class="font-bold">John Freddy Vega</b>, nació en los 80's en Bogotá-Colombia, a sus 17 años de edad fundó su primera empresa online llamada <b class="font-bold">Cristalab</b>, en el año <b class="font-bold">2004</b>. En la época estaba muy demoda y era muy demandado <b class="font-bold">Flash</b>. Freddy comenta: <b class="font-bold">"Cristalab me permitió cometer errores, aprender a contratar gente y entender porqué muchos emprendimientos mueren".</b>
                         </p>
 
-                        <img src="img/johnFreddyVega.png" alt="icon person John Freddy Vega" class="article__img">
+                        <img src="./img/johnFreddyVega.png" alt="icon person John Freddy Vega" class="article__img">
 
                         <p class="paragraph paragraph--section-bigDevice">
                             En particular <b class="font-bold">Freddy Vega</b>, es uno de los referentes más grandes en la industria <b class="font-bold">Tech</b>. Cuando murió <b class="font-bold">Cristalab</b>, nació <b class="font-bold">Platzi</b>.
@@ -201,7 +201,7 @@
                             <b class="font-bold">Christian Van Der Henst</b>, es un guatemalteco que nació el 9 de marzo de 1982, el fue el fundador de <b class="font-bold">Maestros del Web</b>, en el año 1997. Era un foro para los <b class="font-bold">Webmasters</b>.
                         </p>
 
-                        <img src="img/christianVanDerHenst.png" alt="icon person Christian van Der Henst" class="article__img">
+                        <img src="./img/christianVanDerHenst.png" alt="icon person Christian van Der Henst" class="article__img">
 
                         <p class="paragraph paragraph--section-bigDevice">
                             El menciono en su plataforma <b class="font-bold">Maestros del Web</b>: <b class="font-bold">"Se me ocurrió que sería la comunidad hispana para Webmasters. Luego se me ocurrió buscar un nombre relacionado con Webmasters. Y allí surgió la idea de traducir este término, lo que le dio el nombre de "Maestros del Web, en este espacio"</b>.
@@ -215,7 +215,7 @@
                             Ahora bien <b class="font-bold">Platzi</b> es la primera empresa en latinoámercia en entrar a <b class="font-bold">Y Combinator (YC)</b>. Y Combinator es el <b class="font-bold">mayor fondo de inversiones para startups</b>, es la <b class="font-bold">comunidad de los mejores emprendedores de la tierra.</b> Como dato adicional <b class="font-bold">YC</b>, es la mayor escuela de startups en el mundo, de cada <b class="font-bold">60,000</b> empresas solo aceptan el <b class="font-bold">3%</b>.
                         </p>
 
-                        <img src="img/bannerPlatzi.png" alt="icon the platzi" class="article__img">
+                        <img src="./img/bannerPlatzi.png" alt="icon the platzi" class="article__img">
 
                         <p class="paragraph paragraph--section-bigDevice">
                             En conclusión si es estas pensando en estudiar <b class="font-bold">tecnología, Diseño, Marketing, Negocios, Idiomas, entre otros</b>, invierte en Platzi, es una plataforma seria y con muchas ventajas para un <b class="font-bold">Autodidacta</b>.
@@ -238,7 +238,7 @@
                             Según Red Hat meciona: <b class="font-bold">"Una API es un conjunto de definiciones y protocolos que se utiliza para desarrollar e integrar el software de las aplicaciones".</b>
                         </p>
 
-                        <img src="img/apiIconPrincipal.png" alt="icon principal API" class="article__img">
+                        <img src="./img/apiIconPrincipal.png" alt="icon principal API" class="article__img">
 
                         <p class="paragraph paragraph--section-bigDevice">
                             Ahora bien surge la cuestión <b class="font-bold">¿Por qué utilizar una API?</b>, bueno supongamos que deseas hacer una aplicación que ofrezca servicios de transporte algo asi como un <b class="font-bold">UBER o Cabify</b>, necesitarias crear desde cero todo el sistema de navegación e integrar los diferentes métodos para sondear y rastrear el recorrido del chofer durante todo el dia, además de diseñar y conocer todos los caminos, calles, direcciones, atajos y tomar en cuenta el tráfico entre otros.
@@ -256,7 +256,7 @@
                             <b class="font-bold">API REST</b>, es una <b class="font-bold">Arquitectura de software</b> para diseñar API's que se conectan via web mediante el <b class="font-bold">protocolo HTTP (Hyper Text Transfer Protocol)</b>. REST de sus siglas en inglés <b class="font-bold">(Representational State Transfer)</b>.
                         </p>
 
-                        <img src="imG/APIrest.png" alt="Icon API REST" class="article__img">
+                        <img src="./img/APIrest.png" alt="Icon API REST" class="article__img">
 
                         <p class="paragraph paragraph--section-bigDevice">
                             Ahora bien <b class="font-bold">HTTP</b>, son un conjunto de reglas y normas que hay que seguir para la correcta comunicación e interacción entre el <b class="font-bold">cliente-servidor</b>.
@@ -316,7 +316,7 @@
                             La Web son un <b class="font-bold">conjunto de documentos de Hipertexto</b>, en un término más sencillo son documentos que tienen enlaces que los dota de la capacidad de interconectar diferentes documentos HTML, mediante el <b class="font-bold">Protocolo HTTP</b>.
                         </p>
 
-                        <img src="img/whatistheweb.png" alt="whatistheweb" class="article__img">
+                        <img src="./img/whatistheweb.png" alt="whatistheweb" class="article__img">
 
                         <p class="paragraph paragraph--section-bigDevice">
                             Además la web fue propuesta por primera vez por El científico <b class="font-bold">Tim Berners-Lee</b>, en el año <b class="font-bold">1989.</b>, además el es el creador del <b class="font-bold">Lenguaje de marcado de información</b>, es decir <b class="font-bold">HTML</b>.
@@ -326,7 +326,7 @@
                             Ahora bien cuando nace la HTML nace también Web. Muy amenudo algunas personas confunden el término web y considerán que la web es <b class="font-bold">internet</b>, pero eso es un error común con solución.
                         </p>
 
-                        <img src="img/htmlintheweb.png" alt="html whatistheweb" class="article__img">
+                        <img src="./img/htmlintheweb.png" alt="html whatistheweb" class="article__img">
 
                         <p class="paragraph paragraph--section-bigDevice">
                             La <b class="font-bold">Internet</b> es la infraestructura sobre la cual esta montada y funciona la web, en otras palabras es el hardware que permite que podamos usar HTML para declarar y crear nuestras websites.
@@ -336,7 +336,7 @@
                             Todo comenzó con este proyecto llamado <b class="font-bold">ARPANET</b>, que es la internet en sus inicios, la cual fue construida con propósitos militares.
                         </p>
 
-                        <img src="img/internetwhatistheweb.png" alt="internet whatistheweb" class="article__img">
+                        <img src="./img/internetwhatistheweb.png" alt="internet whatistheweb" class="article__img">
 
                         <p class="paragraph paragraph--section-bigDevice">
                             Sin embargo, en al actualidad el propósito de internet es poder conectar a la mayor cantidad de personas con un infraestructura de red mundial para compartir información, realizar negocios entre otras cosas. La web es ese medio que nos permite crear websites usando el lenguaje <b class="font-bold">HTML</b>, para crear siteos web.
@@ -367,20 +367,20 @@
             <h5 class="socialNetworks__title">Redes Sociales</h5>
 
             <div class="iconsSocialNetworks"> <!-- BLOCK iconsSocialNetworks-->
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/github.png" alt="icon github" class="iconsSocialNetworks__image iconGithub"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/github.png" alt="icon github" class="iconsSocialNetworks__image iconGithub"></a>
                 
                 <!--<a href="#" target="_blank" class="iconsSocialNetworks__item"><img src="img/linkedin.png" alt="icon linkedin" class="iconsSocialNetworks__image iconLinkeding"></a>-->
 
-                <a href="#"class="iconsSocialNetworks__item"><img src="img/youtube.png" alt="icon youtube" class="iconsSocialNetworks__image iconYoutube"></a>
+                <a href="#"class="iconsSocialNetworks__item"><img src="./img/youtube.png" alt="icon youtube" class="iconsSocialNetworks__image iconYoutube"></a>
 
                 <a href="#" class="iconsSocialNetworks__item" ><img src="
                     img/facebook.png" alt="icon facebook" class="iconsSocialNetworks__image iconFacebook"></a>
 
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/twitter.png" alt="icon twitter" class="iconsSocialNetworks__image iconTwitter"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/twitter.png" alt="icon twitter" class="iconsSocialNetworks__image iconTwitter"></a>
 
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/instagram.png" alt="icon instagram" class="iconsSocialNetworks__image iconImstagram"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/instagram.png" alt="icon instagram" class="iconsSocialNetworks__image iconImstagram"></a>
 
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/whatsapp.png" alt="icon whatsapp" class="iconsSocialNetworks__image iconWhatsapp"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/whatsapp.png" alt="icon whatsapp" class="iconsSocialNetworks__image iconWhatsapp"></a>
             </div>
 
             <div class="main-modal">
@@ -397,9 +397,9 @@
         <div class="go-up"></div>
     </footer>
 
-    <script src="script/menu.js"></script>
-    <script src="script/modalBox.js"></script>
-    <script src="script/go-to-up.js"></script>
-    <script src= "script/darkMode.js"></script>
+    <script src="./script/menu.js"></script>
+    <script src="./script/modalBox.js"></script>
+    <script src="./script/go-to-up.js"></script>
+    <script src="./script/darkMode.js"></script>
 </body>
 </html>
