--- a/card-1-html5.html
+++ b/card-1-html5.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta name="description" content="En esta sección del Curso de HTML vamos a profundizar en la historia y a responder preguntas cómo: ¿Quién creó HTML?, ¿Cuándo fue creada? y ¿Por qué?.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="name" content="Hairton Mayhuay">
+    <meta name="copyright" content="Hairton M.">
     <title>HTML > History @hairton</title>
 
     <!-- ESTILOS LINKS -->
 
-    <link rel="icon" href="img/iconPersonal.png">
-    <link rel="stylesheet" href="styles/generalStyle.css">
-    <link rel="stylesheet" href="styles/templateGrid.css">
+    <link rel="icon" href="./img/iconPersonal.png">
+    <link rel="stylesheet" href="./styles/generalStyle.css">
+    <link rel="stylesheet" href="./styles/templateGrid.css">
 
     <!-- GOOGLE FONTS -->
 
@@ -31,7 +34,7 @@
     <!-- BLOCK HEADER -->
 
     <header class="header">
-        <a href="index.html"><img class="header__image" src="img/cube2.png" alt="cubo one header"></a>
+        <a href="index.html"><img class="header__image" src="./img/cube2.png" alt="cubo one header"></a>
         <h1 class="header__title-principal">Hairton M.</h1>
     </header>
 
@@ -42,7 +45,7 @@
     <!-- BLOCK NAV -->
 
     <nav class="main-menu">
-        <p class="main-menu__switch"><img src="img/icon_plus_menu.svg" alt="icon switch menu" class="main-menu__icon"></p>
+        <p class="main-menu__switch"><img src="./img/icon_plus_menu.svg" alt="icon switch menu" class="main-menu__icon"></p>
 
         <ul class="menu-principal">
             <li class="menu-principal__item"><a class="menu-principal__link" href="index.html">Home</a></li>
@@ -57,7 +60,7 @@
     <div class="main-content">
         <section class="section">
             <article class="article">
-                <h3 class="article__title">Historia de HTML</h3>
+                <h1 class="article__title">Historia de HTML</h1>
 
                 <span class="article__intro">
                     En esta sección conocerás un poco más de los <b class="font-bold">inicios de HTML Y su creador.</b>.
@@ -67,7 +70,7 @@
                     <b class="font-bold">HTML</b> es una lenguaje que fue creado en <b class="font-bold">1991</b> por un Ingeniero y científico en computación llamado <b class="font-bold">Tim Berners-Lee</b>. Tim creó este lenguaje cuando se encontraba trabajando en el <b class="font-bold">CERN</b>. El comenta que para acceder a la información para los proyectos que se realizaban dentro de la institución, se tenia que acceder a una computadora central.
                 </p>
 
-                <img class="article__img" src="img/timBernersLee.jpg" alt="tim Berners-Lee">
+                <img class="article__img" src="./img/timBernersLee.jpg" alt="tim Berners-Lee">
 
                 <p class="paragraph paragraph--section-bigDevice">
                     Por lo cual, Berners-Lee creó un lenguaje llamado <b class="font-bold">HTML</b>, el cual es un lenguaje de <b class="font-bold">hipertexto</b>, ya que permitia <b class="font-bold">la unión de documentos HTML</b> y podias navegar entre ellos dando tan solo un <b class="font-bold">click</b>, para la época era algo grandioso.
@@ -85,7 +88,7 @@
                     A continuación puedes <b class="font-bold">descargar</b> la imagen de la estrucutra de <b class="font-bold">HTML.</b>
                 </p>
 
-                <a href="img/code_principal_html.png" class="button-link" download="principal_html.png">Download Image Code</a>
+                <a href="./img/code_principal_html.png" class="button-link" download="principal_html.png">Download Image Code</a>
             </article>
         </section>
     </div>
@@ -106,20 +109,20 @@
             <h5 class="socialNetworks__title">Redes Sociales</h5>
 
             <div class="iconsSocialNetworks"> <!-- BLOCK iconsSocialNetworks-->
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/github.png" alt="icon github" class="iconsSocialNetworks__image iconGithub"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/github.png" alt="icon github" class="iconsSocialNetworks__image iconGithub"></a>
                 
                 <!--<a href="#" target="_blank" class="iconsSocialNetworks__item"><img src="img/linkedin.png" alt="icon linkedin" class="iconsSocialNetworks__image iconLinkeding"></a>-->
 
-                <a href="#"class="iconsSocialNetworks__item"><img src="img/youtube.png" alt="icon youtube" class="iconsSocialNetworks__image iconYoutube"></a>
+                <a href="#"class="iconsSocialNetworks__item"><img src="./img/youtube.png" alt="icon youtube" class="iconsSocialNetworks__image iconYoutube"></a>
 
                 <a href="#" class="iconsSocialNetworks__item" ><img src="
                     img/facebook.png" alt="icon facebook" class="iconsSocialNetworks__image iconFacebook"></a>
 
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/twitter.png" alt="icon twitter" class="iconsSocialNetworks__image iconTwitter"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/twitter.png" alt="icon twitter" class="iconsSocialNetworks__image iconTwitter"></a>
 
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/instagram.png" alt="icon instagram" class="iconsSocialNetworks__image iconImstagram"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/instagram.png" alt="icon instagram" class="iconsSocialNetworks__image iconImstagram"></a>
 
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/whatsapp.png" alt="icon whatsapp" class="iconsSocialNetworks__image iconWhatsapp"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/whatsapp.png" alt="icon whatsapp" class="iconsSocialNetworks__image iconWhatsapp"></a>
             </div>
 
             <div class="main-modal">
@@ -137,9 +140,9 @@
     </footer>
 
 
-    <script src="script/menu.js"></script>
-    <script src="script/modalBox.js"></script>
-    <script src="script/go-to-up.js"></script>
-    <script src="script/darkMode.js"></script>
+    <script src="./script/menu.js"></script>
+    <script src="./script/modalBox.js"></script>
+    <script src="./script/go-to-up.js"></script>
+    <script src="./script/darkMode.js"></script>
 </body>
 </html>
