--- a/card-2-html5.html
+++ b/card-2-html5.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta name="description" content="En esta sección del Curso de HTML, aprenderás sobre el poder que tiene la nueva versión de HTML y sus API's.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="name" content="Hairton Mayhuay">
+    <meta name="copyright" content="Hairton M.">
     <title>HTML > sintax & API @hairton</title>
 
     <!-- ESTILOS LINKS -->
 
-    <link rel="icon" href="img/iconPersonal.png">
-    <link rel="stylesheet" href="styles/generalStyle.css">
-    <link rel="stylesheet" href="styles/templateGrid.css">
+    <link rel="icon" href="./img/iconPersonal.png">
+    <link rel="stylesheet" href="./styles/generalStyle.css">
+    <link rel="stylesheet" href="./styles/templateGrid.css">
 
     <!-- GOOGLE FONTS -->
 
@@ -58,9 +61,9 @@
     <div class="main-content">
         <section class="section">
             <article class="article">
-                <h3 class="article__title">HTML y Las API's</h3>
+                <h1 class="article__title">HTML y Las API's</h1>
 
-                <img src="img/api_html.png" alt="api JavaScript y html" class="article__img">
+                <img src="./img/api_html_big.png" alt="api JavaScript y html" class="article__img">
                 
                 <span class="article__intro">
                     En esta sección analizaremos sobre cuales son las mejores que trae consigo <b class="font-bold">HTML5</b>.
@@ -106,20 +109,20 @@
             <h5 class="socialNetworks__title">Redes Sociales</h5>
 
             <div class="iconsSocialNetworks"> <!-- BLOCK iconsSocialNetworks-->
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/github.png" alt="icon github" class="iconsSocialNetworks__image iconGithub"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/github.png" alt="icon github" class="iconsSocialNetworks__image iconGithub"></a>
                 
                 <!--<a href="#" target="_blank" class="iconsSocialNetworks__item"><img src="img/linkedin.png" alt="icon linkedin" class="iconsSocialNetworks__image iconLinkeding"></a>-->
 
-                <a href="#"class="iconsSocialNetworks__item"><img src="img/youtube.png" alt="icon youtube" class="iconsSocialNetworks__image iconYoutube"></a>
+                <a href="#"class="iconsSocialNetworks__item"><img src="./img/youtube.png" alt="icon youtube" class="iconsSocialNetworks__image iconYoutube"></a>
 
                 <a href="#" class="iconsSocialNetworks__item" ><img src="
                     img/facebook.png" alt="icon facebook" class="iconsSocialNetworks__image iconFacebook"></a>
 
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/twitter.png" alt="icon twitter" class="iconsSocialNetworks__image iconTwitter"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="i./mg/twitter.png" alt="icon twitter" class="iconsSocialNetworks__image iconTwitter"></a>
 
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/instagram.png" alt="icon instagram" class="iconsSocialNetworks__image iconImstagram"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/instagram.png" alt="icon instagram" class="iconsSocialNetworks__image iconImstagram"></a>
 
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/whatsapp.png" alt="icon whatsapp" class="iconsSocialNetworks__image iconWhatsapp"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/whatsapp.png" alt="icon whatsapp" class="iconsSocialNetworks__image iconWhatsapp"></a>
             </div>
 
             <div class="main-modal">
@@ -137,9 +140,9 @@
     </footer>
 
 
-    <script src="script/menu.js"></script>
-    <script src="script/modalBox.js"></script>
-    <script src="script/go-to-up.js"></script>
-    <script src="script/darkMode.js"></script>
+    <script src="./script/menu.js"></script>
+    <script src="./script/modalBox.js"></script>
+    <script src="./script/go-to-up.js"></script>
+    <script src="./script/darkMode.js"></script>
 </body>
 </html>
