--- a/card-3-html5.html
+++ b/card-3-html5.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta name="description" content="En este sección del Curso de HTML, aprenderás a definir la estructura principal de un documento HTML, mediante etiquetas (tags).">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="name" content="Hairton Mayhuay">
+    <meta name="copyright" content="Hairton M.">
     <title>HTML > Structure @hairton</title>
 
     <!-- ESTILOS LINKS -->
 
-    <link rel="icon" href="img/iconPersonal.png">
-    <link rel="stylesheet" href="styles/generalStyle.css">
-    <link rel="stylesheet" href="styles/templateGrid.css">
+    <link rel="icon" href="./img/iconPersonal.png">
+    <link rel="stylesheet" href="./styles/generalStyle.css">
+    <link rel="stylesheet" href="./styles/templateGrid.css">
 
     <!-- GOOGLE FONTS -->
 
@@ -33,7 +36,7 @@
 
 
     <header class="header">
-        <a href="index.html"><img class="header__image" src="img/cube2.png" alt="cubo one header"></a>
+        <a href="index.html"><img class="header__image" src="./img/cube2.png" alt="cubo one header"></a>
         <h1 class="header__title-principal">Hairton M.</h1>
     </header>
 
@@ -44,7 +47,7 @@
     <!-- BLOCK NAV -->
 
     <nav class="main-menu">
-        <p class="main-menu__switch"><img src="img/icon_plus_menu.svg" alt="icon switch menu" class="main-menu__icon"></p>
+        <p class="main-menu__switch"><img src="./img/icon_plus_menu.svg" alt="icon switch menu" class="main-menu__icon"></p>
 
         <ul class="menu-principal">
             <li class="menu-principal__item"><a class="menu-principal__link" href="index.html">Home</a></li>
@@ -59,7 +62,7 @@
     <div class="main-content">
         <section class="section">
             <article class="article">
-                <h3 class="article__title">Estructura principal de HTML</h3>
+                <h1 class="article__title">Estructura principal de HTML</h1>
 
                 <span class="article__intro">
                     En esta sección del curso de HTML5 hablaremos sobre la estructura principal de HTML, responderemos preguntas cómo <b class="font-bold">¿Qué son las etiquetas</b>?, entre otros.
@@ -87,13 +90,13 @@
                     <b class="font-bold">Las Clases</b>, nos permiten otorgarle un atributo a una etiqueta en html para luego referenciar a ese elemento con esa clase para otorgarle algunos estilos con <b class="font-bold">CSS (Lenguaje de Estilos en Cascada)</b>, o también se usan para darle algunos eventos o funcionalidades con <b class="font-bold">JavaScript (Lenguaje de Programación Orientado a Objetos)</b>.
                 </p>
 
-                <img src="img/atribute_class_html.png" alt="atribute class html" class="codes codes--bigDevice">
+                <img src="./img/atribute_class_html.png" alt="atribute class html" class="codes codes--bigDevice">
 
                 <p class="paragraph  paragraph--section-bigDevice">
                     <b class="font-bold">Los identificadores</b>, por otra parte también se pueden usar para dar estilos, sin embargo son recomendados para declararse una sola vez en cada etiqueta, mientras que una <b class="font-bold">clase pueden ser utilizado en más de un elemnto HTML</b>. Ahora bien los identificadores estan definidos por el siguiente ejemplo: 
                 </p>
 
-                <img src="img/atribute_identify_html.png" alt="atribute id's html" class="codes codes--bigDevice">
+                <img src="./img/atribute_identify_html.png" alt="atribute id's html" class="codes codes--bigDevice">
 
                 <p class="paragraph  paragraph--section-bigDevice">
                     Lo que esta sonbreado y de color gris en signos de mayor y menor es una comentario en HTML
@@ -103,7 +106,7 @@
                     Ahora bien vayamos a la estructura principal de HTML todo empieza por la siguiente imagen: 
                 </p>
 
-                <img src="img/structure_html.png" alt="structure html" class="codes codes--bigDevice">
+                <img src="./img/structure_html.png" alt="structure html" class="codes codes--bigDevice">
 
                 <p class="paragraph  paragraph--section-bigDevice">
                     Lo que se encuentra en la <b class="font-bold">linea 1</b>, es una etiqueta que le indica al navegador que es un documento html, cabe mencionar que nuestro documento debe estar con una extensión <b class="font-bold">.html</b>
@@ -160,20 +163,20 @@
             <h5 class="socialNetworks__title">Redes Sociales</h5>
 
             <div class="iconsSocialNetworks"> <!-- BLOCK iconsSocialNetworks-->
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/github.png" alt="icon github" class="iconsSocialNetworks__image iconGithub"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/github.png" alt="icon github" class="iconsSocialNetworks__image iconGithub"></a>
                 
                 <!--<a href="#" target="_blank" class="iconsSocialNetworks__item"><img src="img/linkedin.png" alt="icon linkedin" class="iconsSocialNetworks__image iconLinkeding"></a>-->
 
-                <a href="#"class="iconsSocialNetworks__item"><img src="img/youtube.png" alt="icon youtube" class="iconsSocialNetworks__image iconYoutube"></a>
+                <a href="#"class="iconsSocialNetworks__item"><img src="./img/youtube.png" alt="icon youtube" class="iconsSocialNetworks__image iconYoutube"></a>
 
                 <a href="#" class="iconsSocialNetworks__item" ><img src="
                     img/facebook.png" alt="icon facebook" class="iconsSocialNetworks__image iconFacebook"></a>
 
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/twitter.png" alt="icon twitter" class="iconsSocialNetworks__image iconTwitter"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/twitter.png" alt="icon twitter" class="iconsSocialNetworks__image iconTwitter"></a>
 
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/instagram.png" alt="icon instagram" class="iconsSocialNetworks__image iconImstagram"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/instagram.png" alt="icon instagram" class="iconsSocialNetworks__image iconImstagram"></a>
 
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/whatsapp.png" alt="icon whatsapp" class="iconsSocialNetworks__image iconWhatsapp"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/whatsapp.png" alt="icon whatsapp" class="iconsSocialNetworks__image iconWhatsapp"></a>
             </div>
 
             <div class="main-modal">
@@ -191,9 +194,9 @@
     </footer>
 
 
-    <script src="script/menu.js"></script>
-    <script src="script/modalBox.js"></script>
-    <script src="script/go-to-up.js"></script>
-    <script src="script/darkMode.js"></script>
+    <script src="./script/menu.js"></script>
+    <script src="./script/modalBox.js"></script>
+    <script src="./script/go-to-up.js"></script>
+    <script src="./script/darkMode.js"></script>
 </body>
 </html>
