--- a/card-4-html5.html
+++ b/card-4-html5.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta name="description" content="En este sección del Curso de HTML, aprenderás a usar los 10 tags (etiquetas) más importantes al empezar a desarrollar siteos o aplicaciones web.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="name" content="Hairton Mayhuay">
+    <meta name="copyright" content="Hairton M.">
     <title>HTML > tags @hairton</title>
 
     <!-- ESTILOS LINKS -->
 
-    <link rel="icon" href="img/iconPersonal.png">
-    <link rel="stylesheet" href="styles/generalStyle.css">
-    <link rel="stylesheet" href="styles/templateGrid.css">
+    <link rel="icon" href="./img/iconPersonal.png">
+    <link rel="stylesheet" href="./styles/generalStyle.css">
+    <link rel="stylesheet" href="./styles/templateGrid.css">
 
 
     <!-- GOOGLE FONTS -->
@@ -32,7 +35,7 @@
     <!-- BLOCK HEADER -->
 
     <header class="header">
-        <a href="index.html"><img class="header__image" src="img/cube2.png" alt="cubo one header"></a>
+        <a href="index.html"><img class="header__image" src="./img/cube2.png" alt="cubo one header"></a>
         <h1 class="header__title-principal">Hairton M.</h1>
     </header>
 
@@ -43,7 +46,7 @@
     <!-- BLOCK NAV -->
 
     <nav class="main-menu">
-        <p class="main-menu__switch"><img src="img/icon_plus_menu.svg" alt="icon switch menu" class="main-menu__icon"></p>
+        <p class="main-menu__switch"><img src="./img/icon_plus_menu.svg" alt="icon switch menu" class="main-menu__icon"></p>
 
         <ul class="menu-principal">
             <li class="menu-principal__item"><a class="menu-principal__link" href="index.html">Home</a></li>
@@ -59,71 +62,71 @@
     <div class="main-content">
         <section class="section">
             <article class="article">
-                <h3 class="article__title">Los 10 <b>Tags</b> necesarios en HTML</h3>
+                <h1 class="article__title">Los 10 Tags necesarios en HTML</h1>
 
                 <span class="article__intro">
                     En esta sección hablaremos de los <b class="font-bold">tags</b> que son más necesarios y útiles al momento de hacer nuestra <b class="font-bold">website</b>.
                 </span>
 
-                <p class="paragraph paragraph--section-bigDevice">
+                <p class="./paragraph paragraph--section-bigDevice">
                     Empezemos por la etiqueta <b class="font-bold">header</b> en donde colocamos nuestra parte principal de nuestra website por ejemplo el nombre ys logo entre otros
                 </p>
 
-                <img src="img/tag_header_html.png" alt="tag header html" class="codes codes--bigDevice">
+                <img src="./img/tag_header_html.png" alt="tag header html" class="codes codes--bigDevice">
 
                 <p class="paragraph paragraph--section-bigDevice">
                     Luego esta la etiqueta <b class="font-bold">nav</b> en donde colocamos el menú de navegación de nuestra web podemos colocar etiquetas como <b class="font-bold">ul, a, li</b> para los enlaces.
                 </p>
 
-                <img src="img/tag_nav_html.png" alt="tag nav html" class="codes codes--bigDevice">
+                <img src="./img/tag_nav_html.png" alt="tag nav html" class="codes codes--bigDevice">
 
                 <p class="paragraph paragraph--section-bigDevice">
                     La etiqueta <b class="font-bold">section</b> es donde colocamos la información general de nuestra web por ejemplo si nuestra web trata sobre Tecnologia podemos colocar noticias, videos e imagenes relacionados al tema de la web.
                 </p>
 
-                <img src="img/tag_section_html.png" alt="tag section html" class="codes codes--bigDevice">
+                <img src="./img/tag_section_html.png" alt="tag section html" class="codes codes--bigDevice">
 
                 <p class="paragraph paragraph--section-bigDevice">
                     La etiqueta <b class="font-bold">aside</b>, es donde se coloca información que no tiene que ver necesariamente con la temática de la web, pero es opción podemos añadirla si la creemos necesaria.
                 </p>
 
-                <img src="img/tag_aside_html.png" alt="tag aside html" class="codes codes--bigDevice">
+                <img src="./img/tag_aside_html.png" alt="tag aside html" class="codes codes--bigDevice">
 
                 <p class="paragraph paragraph--section-bigDevice">
                     La etiqueta <b class="font-bold">footer</b>, es donde colocamos la información de nuetra web, empresa o negocio por ejemplo las redes sociales, contactos, dirección, entre otras cosas.
                 </p>
 
-                <img src="img/tag_footer_html.png" alt="tag footer html" class="codes codes--bigDevice">
+                <img src="./img/tag_footer_html.png" alt="tag footer html" class="codes codes--bigDevice">
 
                 <p class="paragraph paragraph--section-bigDevice">
                     La etiqueta <b class="font-bold">a</b> nos permite entrelazar documentos html, podemos acceder a información de otras web, o acceder a videos e imagenes.
                 </p>
 
-                <img src="img/tag_a_html.png" alt="tag a html" class="codes codes--bigDevice">
+                <img src="./img/tag_a_html.png" alt="tag a html" class="codes codes--bigDevice">
 
                 <p class="paragraph paragraph--section-bigDevice">
                     La etiqueta <b class="font-bold">iframe</b> nos permite traer videos, audio, y localizaciones de lugares usando esta etiqueta.
                 </p>
 
-                <img src="img/tag_iframe_html.png" alt="tag iifame html" class="codes codes--bigDevice">
+                <img src="./img/tag_iframe_html.png" alt="tag iifame html" class="codes codes--bigDevice">
 
                 <p class="paragraph paragraph--section-bigDevice">
                     La etiqueta <b class="font-bold">link</b>, que se utiliza para la traer los estilos <b>CSS</b> de otro archivo.
                 </p>        
                 
-                <img src="img/tag_link_html.png" alt="tag link html" class="codes codes--bigDevice">
+                <img src="./img/tag_link_html.png" alt="tag link html" class="codes codes--bigDevice">
 
                 <p class="paragraph paragraph--section-bigDevice">
                     La etiqueta <b class="font-bold">script</b> nos sirve para enlazar y utilizar JavaScript en nuestra website.
                 </p>    
 
-                <img src="img/tag_script_html.png" alt="tag script html" class="codes codes--bigDevice">
+                <img src="./img/tag_script_html.png" alt="tag script html" class="codes codes--bigDevice">
 
                 <p class="paragraph paragraph--section-bigDevice">
                     Por último en esta sección la etiqueta <b class="font-bold">style</b> que nos permite añadir estilos dentro de nuestro propio html.
                 </p>    
 
-                <img src="img/tag_style_html.png" alt="tag style html" class="codes codes--bigDevice">
+                <img src="./img/tag_style_html.png" alt="tag style html" class="codes codes--bigDevice">
             </article>
         </section>
     </div>
