--- a/curso_css3.html
+++ b/curso_css3.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta name="description" content="El Curso de CSS3, tiene como objetivo poder enseñarte los conceptos necesarios para que puedas diseñar y otorgar estilos a tú sitio / aplicación web.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="name" content="Hairton Mayhuay">
+    <meta name="copyright" content="Hairton M.">
     <title>Course CSS > @hairton</title>
 
     <!-- ESTILOS LINKS -->
 
-    <link rel="icon" href="img/iconPersonal.png">
-    <link rel="stylesheet" href="styles/generalStyle.css">
-    <link rel="stylesheet" href="styles/templateGrid.css">
+    <link rel="icon" href="./img/iconPersonal.png">
+    <link rel="stylesheet" href="./styles/generalStyle.css">
+    <link rel="stylesheet" href="./styles/templateGrid.css">
 
     <!-- GOOGLE FONTS -->
 
@@ -31,7 +34,7 @@
     <!-- BLOCK HEADER -->
 
     <header class="header">
-        <a href="index.html"><img class="header__image" src="img/cube2.png" alt="cubo one header"></a>
+        <a href="index.html"><img class="header__image" src="./img/cube2.png" alt="cubo one header"></a>
         <h1 class="header__title-principal">Hairton M.</h1>
     </header>   
     
@@ -42,7 +45,7 @@
     <!-- BLOCK NAV -->
 
     <nav class="main-menu">
-        <p class="main-menu__switch"><img src="img/icon_plus_menu.svg" alt="icon switch menu" class="main-menu__icon"></p>
+        <p class="main-menu__switch"><img src="./img/icon_plus_menu.svg" alt="icon switch menu" class="main-menu__icon"></p>
 
         <ul class="menu-principal">
             <li class="menu-principal__item"><a class="menu-principal__link" href="index.html">Home</a></li>
@@ -58,7 +61,7 @@
     <div class="main-content">
         <section class="section">
             <article class="article">
-                <h3 class="article__title">CURSO DE CSS3</h3>
+                <h1 class="article__title">CURSO DE CSS3</h1>
 
                 <span class="article__intro">
                     Este curso esta enfocado a ofrecer una de las bases para el desarrollo de páginas Web, con <b class="font-bold">CSS</b>, podrás hacer que tú web tenga más presencia visual.
@@ -70,7 +73,7 @@
 
                 <div class="content-cards">
                     <div class="cards">
-                        <img class="cards__img" src="img/whats-css3.png" alt="icon css">
+                        <img class="cards__img" src="./img/whats-css3.png" alt="icon css">
                         <a href="card-1-css3.html" class="cards__title">¿Qué es CSS?</a>
                         <p class="cards__description">
                             CSS es un lenguaje de estilos que nos permite otorgar creatividad y diseños personalizados en nuestra website.
@@ -78,7 +81,7 @@
                     </div>
 
                     <div class="cards">
-                        <img class="cards__img" src="img/html_css.png" alt="html and css">
+                        <img class="cards__img" src="./img/html_css.png" alt="html and css">
                         <a href="card-2-css3.html" class="cards__title">Formas De Usar CSS En HTML</a>
                         <p class="cards__description">
                             Existen muchas formas de usar <b class="font-bold">CSS</b> en nuestra Website podemos colocarlo en el <b class="font-bold">head</b> utilizando la etiqueta <b class="font-bold">"link"</b>
@@ -86,7 +89,7 @@
                     </div>
 
                     <div class="cards">
-                        <img class="cards__img" src="img/selectros_css.png" alt="selectors css">
+                        <img class="cards__img" src="./img/selectros_css.png" alt="selectors css">
                         <a href="card-3-css3.html" class="cards__title">Selectores en CSS</a>
                         <p class="cards__description">
                             En CSS existen un conjunto de formas para referenciar a los elementos HTML, usando <b class="font-bold">selectores</b>.
@@ -108,7 +111,7 @@
             <div class="aside-info"> <!-- BLOCK aside-info -->
                 <h4 class="aside-info__title">Variables en CSS</h4>
 
-                <img src="img/variable_css.png" alt="variables in css" class="aside-info__img">
+                <img src="./img/variable_css.png" alt="variables in css" class="aside-info__img">
 
                 <p class="paragraph paragraph--aside">
                     En <b class="font-bold font-bold--aside">CSS3</b> ahora se pueden usar variables que pueden guardar y almacenar valores. Las variables se declaran mediante la palabra clave <b class="font-bold font-bold--aside">:root{ /*------- variables -------*/}</b> como por ejemplo en el siguiente código...
@@ -135,20 +138,20 @@
             <h5 class="socialNetworks__title">Redes Sociales</h5>
 
             <div class="iconsSocialNetworks"> <!-- BLOCK iconsSocialNetworks-->
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/github.png" alt="icon github" class="iconsSocialNetworks__image iconGithub"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/github.png" alt="icon github" class="iconsSocialNetworks__image iconGithub"></a>
                 
                 <!--<a href="#" target="_blank" class="iconsSocialNetworks__item"><img src="img/linkedin.png" alt="icon linkedin" class="iconsSocialNetworks__image iconLinkeding"></a>-->
 
-                <a href="#"class="iconsSocialNetworks__item"><img src="img/youtube.png" alt="icon youtube" class="iconsSocialNetworks__image iconYoutube"></a>
+                <a href="#"class="iconsSocialNetworks__item"><img src="./img/youtube.png" alt="icon youtube" class="iconsSocialNetworks__image iconYoutube"></a>
 
                 <a href="#" class="iconsSocialNetworks__item" ><img src="
                     img/facebook.png" alt="icon facebook" class="iconsSocialNetworks__image iconFacebook"></a>
 
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/twitter.png" alt="icon twitter" class="iconsSocialNetworks__image iconTwitter"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/twitter.png" alt="icon twitter" class="iconsSocialNetworks__image iconTwitter"></a>
 
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/instagram.png" alt="icon instagram" class="iconsSocialNetworks__image iconImstagram"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/instagram.png" alt="icon instagram" class="iconsSocialNetworks__image iconImstagram"></a>
 
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/whatsapp.png" alt="icon whatsapp" class="iconsSocialNetworks__image iconWhatsapp"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/whatsapp.png" alt="icon whatsapp" class="iconsSocialNetworks__image iconWhatsapp"></a>
             </div>
 
             <div class="main-modal">
@@ -166,9 +169,9 @@
     </footer>
 
 
-    <script src="script/menu.js"></script>
-    <script src="script/modalBox.js"></script>
-    <script src="script/go-to-up.js"></script>
-    <script src="script/darkMode.js"></script>
+    <script src="./script/menu.js"></script>
+    <script src="./script/modalBox.js"></script>
+    <script src="./script/go-to-up.js"></script>
+    <script src="./script/darkMode.js"></script>
 </body>
 </html>
