--- a/news.html
+++ b/news.html
@@ -12,9 +12,9 @@
     
     <!-- ESTILOS LINKS -->
 
-    <link rel="icon" href="img/iconPersonal.png">
-    <link rel="stylesheet" href="styles/generalStyle.css">
-    <link rel="stylesheet" href="styles/templateGrid.css">
+    <link rel="icon" href="./img/iconPersonal.png">
+    <link rel="stylesheet" href="./styles/generalStyle.css">
+    <link rel="stylesheet" href="./styles/templateGrid.css">
 
     <!-- GOOGLE FONTS -->
 
@@ -35,7 +35,7 @@
     <!-- BLOCK HEADER -->
 
     <header class="header">
-        <a href="index.html"><img class="header__image" src="img/cube2.png" alt="cubo one header"></a>
+        <a href="index.html"><img class="header__image" src="./img/cube2.png" alt="cubo one header"></a>
         <h1 class="header__title-principal">Hairton M.</h1>
     </header>
 
@@ -46,7 +46,7 @@
     <!-- BLOCK NAV -->
 
     <nav class="main-menu">
-        <p class="main-menu__switch"><img src="img/icon_plus_menu.svg" alt="icon switch menu" class="main-menu__icon"></p>
+        <p class="main-menu__switch"><img src="./img/icon_plus_menu.svg" alt="icon switch menu" class="main-menu__icon"></p>
 
         <ul class="menu-principal">
             <li class="menu-principal__item"><a class="menu-principal__link" href="index.html">Home</a></li>
@@ -64,7 +64,7 @@
             <article class="article"> <!-- BLOCK article -->
                 <h1 class="article__title">Noticias de Tecnología</h1>
 
-                <img class="article__img" src="img/newsTecnology.png" alt="icon news Tecnología">
+                <img class="article__img" src="./img/newsTecnology.png" alt="icon news Tecnología">
 
                 <span class="article__intro"> <!--BLOCK font-block-->
                     En esta sección veras lo nuevo y último en tecnología como <b class="font-bold">frameworks, librerias, lenguajes de programación, startups y más...</b>
@@ -80,43 +80,43 @@
                             El <b class="font-bold">28 de agosto del 2020</b> el Empresario y multimillonario <b class="font-bold">Elon Musk</b> presento su más reciente mejora el <b class="font-bold">Chip Cerebral de Neuralink</b>, la cual promete muchas mejoras para la humanidad y la tecnología.
                         </p>
 
-                        <img src="img/chipNeuralink.webp" alt="img chip Neuralink" class="panel-acordion__img">
+                        <img src="./img/chipNeuralink.webp" alt="img chip Neuralink" class="panel-acordion__img">
 
                         <p class="paragraph">
                             Ahora bien tal vez se estan preguntando ¿Qué es Neuralink?, bueno <b class="font-bold">Neuralink Corporation</b> es una empresa de <b class="font-bold">neurotecnología</b> especializada en el desarrollo de interfaces <b class="font-bold">cerebro-computadora</b>, implantables, fundada por Elon Musk.
                         </p>
 
-                        <img src="img/iconNeuralink.png" alt="icon Neuralink" class="panel-acordion__img--small">
+                        <img src="./img/iconNeuralink.png" alt="icon Neuralink" class="panel-acordion__img--small">
 
                         <p class="paragraph">
                             El chip Neuralink pretende curar enfermedades nuerológicas como: <b class="font-bold">ansiedad, insomnio, pérdida de memoria, pérdida de audición, ceguera, parálisis, Adicción, despresión, daño cerebral, entre otros.</b>, Asi lo menciono Elon Musk en su conferencia.
                         </p>
 
-                        <img src="img/illnessNuerology.png" alt="Neurological diseases" class="panel-acordion__img--small">
+                        <img src="./img/illnessNuerology.png" alt="Neurological diseases" class="panel-acordion__img--small">
 
                         <p class="paragraph">
                             <b class="font-bold">Caracteristicas del Chip: </b> En su primera versión el chip tenia cables y el procedimiento quirúrgico era muy complejo. Sin embargo, en la actualidad el chip no tiene cables y tiene un tamaño de <b class="font-bold">23 mm x 8 mm</b>, además existe una máquina especializada que se encarga de su implantación en nuestro cerebro.
                         </p>
 
-                        <img src="img/machineNeuralink.webp" alt="machine Neuralink" class="panel-acordion__img">
+                        <img src="./img/machineNeuralink.webp" alt="machine Neuralink" class="panel-acordion__img">
 
                         <p class="paragraph">
                             Para graficarlo y entenderlo mejor veamos la siguiente imagen esta es la versión en donde habian cables, en lo particular causa mucho temor pensar en el procedimiento que hay que seguir.
                         </p>
 
-                        <img src="img/chipFirstView.png" alt="first view chip" class="panel-acordion__img">
+                        <img src="./img/chipFirstView.png" alt="first view chip" class="panel-acordion__img">
 
                         <p class="paragraph">
                             Sin embargo en la conferencia que dio el <b class="font-bold">28 de Agosto</b>, el chip tiene casi el tamaño de una moneda y es manejado todo mediante <b class="font-bold">Bluetooh</b>. En la imagen que puedes visualizar a continuación se puede ver de manera general el procedimiento.
                         </p>
 
-                        <img src="img/secondViewChip.png" alt="second view chip" class="panel-acordion__img">
+                        <img src="./img/secondViewChip.png" alt="second view chip" class="panel-acordion__img">
 
                         <p class="paragraph">
                             Además el chip de Neuralink tinene una velocidad de datos de megabit e inalámbrica, dura todo el dia y se carga por las noches con un dispotitivo que se coloca al exterior de la cabeza.
                         </p>
 
-                        <img src="img/cargadorChip.png" alt="cargador chip Neuralink" class="panel-acordion__img--small">
+                        <img src="./img/cargadorChip.png" alt="cargador chip Neuralink" class="panel-acordion__img--small">
 
                         <p class="paragraph">
                             El chip de Neuralink pretende grabar y monitorizar las señales cerebrales que ocurren en nuestro cerebro. Elon Musk menciono en la conferencia que dio: 
@@ -150,7 +150,7 @@
             <div class="aside-info">
                 <h4 class="aside-info__title">Platzi</h4>
 
-                <img class="aside-info__img" src="img/icon_platzi.png" alt="icon platzi">
+                <img class="aside-info__img" src="./img/icon_platzi.png" alt="icon platzi">
 
                 <p class="paragraph paragraph--aside">
                     <b class="font-bold font-bold--aside">Platzi</b> es una plataforma de educación online que ofrece cursos de <b class="font-bold font-bold--aside">Diseño, marketing, tecnología y finanzas</b>, sus fundadores son John Freddy Vega y Christian Van Der Henst...
@@ -176,20 +176,20 @@
             <h5 class="socialNetworks__title">Redes Sociales</h5>
 
             <div class="iconsSocialNetworks"> <!-- BLOCK iconsSocialNetworks-->
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/github.png" alt="icon github" class="iconsSocialNetworks__image iconGithub"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/github.png" alt="icon github" class="iconsSocialNetworks__image iconGithub"></a>
                 
                 <!--<a href="#" target="_blank" class="iconsSocialNetworks__item"><img src="img/linkedin.png" alt="icon linkedin" class="iconsSocialNetworks__image iconLinkeding"></a>-->
 
-                <a href="#"class="iconsSocialNetworks__item"><img src="img/youtube.png" alt="icon youtube" class="iconsSocialNetworks__image iconYoutube"></a>
+                <a href="#"class="iconsSocialNetworks__item"><img src="./img/youtube.png" alt="icon youtube" class="iconsSocialNetworks__image iconYoutube"></a>
 
                 <a href="#" class="iconsSocialNetworks__item" ><img src="
                     img/facebook.png" alt="icon facebook" class="iconsSocialNetworks__image iconFacebook"></a>
 
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/twitter.png" alt="icon twitter" class="iconsSocialNetworks__image iconTwitter"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/twitter.png" alt="icon twitter" class="iconsSocialNetworks__image iconTwitter"></a>
 
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/instagram.png" alt="icon instagram" class="iconsSocialNetworks__image iconImstagram"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/instagram.png" alt="icon instagram" class="iconsSocialNetworks__image iconImstagram"></a>
 
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/whatsapp.png" alt="icon whatsapp" class="iconsSocialNetworks__image iconWhatsapp"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/whatsapp.png" alt="icon whatsapp" class="iconsSocialNetworks__image iconWhatsapp"></a>
             </div>
 
             <div class="main-modal">
@@ -206,10 +206,10 @@
         <div class="go-up"></div>
     </footer>
 
-    <script src="script/menu.js"></script>
-    <script src="script/acordion-news.js"></script>
-    <script src="script/modalBox.js"></script>
-    <script src="script/go-to-up.js"></script>
-    <script src="script/darkMode.js"></script>
+    <script src="./script/menu.js"></script>
+    <script src="./script/acordion-news.js"></script>
+    <script src="./script/modalBox.js"></script>
+    <script src="./script/go-to-up.js"></script>
+    <script src="./script/darkMode.js"></script>
 </body>
 </html>
