--- a/card-3-css3.html
+++ b/card-3-css3.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta name="description" content="En esta sección del Curso de CSS3, aprenderás a usar los selectores con el objetivo de otorgar estilos a ciertos elemetos HTML y no a todos.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="name" content="Hairton Mayhuay">
+    <meta name="copyright" content="Hairton M.">
     <title>CSS > Selectors @hairton</title>
 
     <!-- ESTILOS LINKS -->
 
-    <link rel="icon" href="img/iconPersonal.png">
-    <link rel="stylesheet" href="styles/generalStyle.css">
-    <link rel="stylesheet" href="styles/templateGrid.css">
+    <link rel="icon" href="./img/iconPersonal.png">
+    <link rel="stylesheet" href="./styles/generalStyle.css">
+    <link rel="stylesheet" href="./styles/templateGrid.css">
 
     <!-- GOOGLE FONTS -->
 
@@ -58,7 +61,7 @@
     <div class="main-content">
         <section class="section">
             <article class="article">
-                <h3 class="article__title">Selectores en CSS</h3>
+                <h1 class="article__title">Selectores en CSS</h1>
 
                 <span class="article__intro">
                     En esta sección veremos ¿Qué son los CSS?, ¿Cuáles son los más usados?, entre otros.
@@ -72,19 +75,19 @@
                     <b class="font-bold">Selector universal (*): </b> definirá todos los elementos a los cuales se el aplicará una regla de estilos. Por ejemplo: 
                 </p>
 
-                <img src="img/universal_selector_css.png" alt="universal selector css" class="codes codes--bigDevice">
+                <img src="./img/universal_selector_css.png" alt="universal selector css" class="codes codes--bigDevice">
                 
                 <p class="paragraph paragraph--section-bigDevice">
                     <b class="font-bold">Tipos de Selectores CSS: </b> se selecciona los elementos por su nombre en los nodos HTML, es decir por su nombre de etiqueta.
                 </p>
 
-                <img src="img/type_selectors_css.png" alt="type selectors css" class="codes codes--bigDevice">
+                <img src="./img/type_selectors_css.png" alt="type selectors css" class="codes codes--bigDevice">
 
                 <p class="paragraph paragraph--section-bigDevice">
                     <b class="font-bold">Selectores de Clases CSS: </b> se seleccionan los elementos HTML que tengan los mismos atributos que las clases.
                 </p>
 
-                <img src="img/selector_class_css.png" alt="selector class css" class="codes codes--bigDevice">
+                <img src="./img/selector_class_css.png" alt="selector class css" class="codes codes--bigDevice">
             </article>
         </section>
     </div>
@@ -105,20 +108,20 @@
             <h5 class="socialNetworks__title">Redes Sociales</h5>
 
             <div class="iconsSocialNetworks"> <!-- BLOCK iconsSocialNetworks-->
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/github.png" alt="icon github" class="iconsSocialNetworks__image iconGithub"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/github.png" alt="icon github" class="iconsSocialNetworks__image iconGithub"></a>
                 
                 <!--<a href="#" target="_blank" class="iconsSocialNetworks__item"><img src="img/linkedin.png" alt="icon linkedin" class="iconsSocialNetworks__image iconLinkeding"></a>-->
 
-                <a href="#"class="iconsSocialNetworks__item"><img src="img/youtube.png" alt="icon youtube" class="iconsSocialNetworks__image iconYoutube"></a>
+                <a href="#"class="iconsSocialNetworks__item"><img src="./img/youtube.png" alt="icon youtube" class="iconsSocialNetworks__image iconYoutube"></a>
 
                 <a href="#" class="iconsSocialNetworks__item" ><img src="
                     img/facebook.png" alt="icon facebook" class="iconsSocialNetworks__image iconFacebook"></a>
 
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/twitter.png" alt="icon twitter" class="iconsSocialNetworks__image iconTwitter"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/twitter.png" alt="icon twitter" class="iconsSocialNetworks__image iconTwitter"></a>
 
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/instagram.png" alt="icon instagram" class="iconsSocialNetworks__image iconImstagram"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/instagram.png" alt="icon instagram" class="iconsSocialNetworks__image iconImstagram"></a>
 
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/whatsapp.png" alt="icon whatsapp" class="iconsSocialNetworks__image iconWhatsapp"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/whatsapp.png" alt="icon whatsapp" class="iconsSocialNetworks__image iconWhatsapp"></a>
             </div>
 
             <div class="main-modal">
@@ -136,9 +139,9 @@
     </footer>
 
 
-    <script src="script/menu.js"></script>
-    <script src="script/modalBox.js"></script>
-    <script src="script/go-to-up.js"></script>
-    <script src="script/darkMode.js"></script>
+    <script src="./script/menu.js"></script>
+    <script src="./script/modalBox.js"></script>
+    <script src="./script/go-to-up.js"></script>
+    <script src="./script/darkMode.js"></script>
 </body>
 </html>
