--- a/courses.html
+++ b/courses.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta name="description" content="En esta sección conocerás un poco más de los cursos que imparto, lo cuáles estan relacionados al mundo del Desarrollo Web.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="name" content="Hairton Mayhuay">
+    <meta name="copyright" content="Hairton M.">
     <title>Courses | @hairton</title>
 
     <!-- ESTILOS LINKS -->
 
-    <link rel="icon" href="img/iconPersonal.png">
-    <link rel="stylesheet" href="styles/generalStyle.css">
-    <link rel="stylesheet" href="styles/templateGrid.css">
+    <link rel="icon" href="./img/iconPersonal.png">
+    <link rel="stylesheet" href="./styles/generalStyle.css">
+    <link rel="stylesheet" href="./styles/templateGrid.css">
 
     <!-- GOOGLE FONTS -->
 
@@ -31,7 +34,7 @@
     <!-- BLOCK HEADER -->
 
     <header class="header">
-        <a href="index.html"><img class="header__image" src="img/cube2.png" alt="cubo one header"></a>
+        <a href="index.html"><img class="header__image" src="./img/cube2.png" alt="cubo one header"></a>
         <h1 class="header__title-principal">Hairton M.</h1>
     </header>
 
@@ -42,7 +45,7 @@
     <!-- BLOCK NAV -->
 
     <nav class="main-menu">
-        <p class="main-menu__switch"><img src="img/icon_plus_menu.svg" alt="icon switch menu" class="main-menu__icon"></p>
+        <p class="main-menu__switch"><img src="./img/icon_plus_menu.svg" alt="icon switch menu" class="main-menu__icon"></p>
 
         <ul class="menu-principal">
             <li class="menu-principal__item"><a class="menu-principal__link" href="index.html">Home</a></li>
@@ -57,9 +60,9 @@
     <div class="main-content">
         <section class="section">
             <article class="article">
-                <h3 class="article__title">Cursos</h3>
+                <h1 class="article__title">Cursos</h1>
 
-                <img class="article__img" src="img/icon-courses.png" alt="icon of courses">
+                <img class="article__img" src="./img/icon-courses.png" alt="icon of courses">
 
                 <span class="article__intro">
                     En esta sección verás los cursos que imparto en desarrollo web <b class="font-bold">HTML, CSS & JS</b>
@@ -67,7 +70,7 @@
 
                 <div class="content-cards">
                     <div class="cards">
-                        <img src="img/logo_html5.png" alt="icon courses HTML5" class="cards__img">
+                        <img src="./img/logo_html5.png" alt="icon courses HTML5" class="cards__img">
                         <a href="curso_html5.html" class="cards__title">HTML5</a>
                         <p class="cards__description">
                             En este curso verás ¿Cué es?, ¿Còmo usarlo? y ¿Què mejoras tiene este lenguaje?...
@@ -75,7 +78,7 @@
                     </div>
 
                     <div class="cards">
-                        <img src="img/icon-css3.png" alt="icon courses css3" class="cards__img">
+                        <img src="./img/icon-css3.png" alt="icon courses css3" class="cards__img">
                         <a href="curso_css3.html" class="cards__title">CSS3</a>
                         <p class="cards__description">
                             En este curso verás que son los identificadores, clases y animaciones...
@@ -110,20 +113,20 @@
             <h5 class="socialNetworks__title">Redes Sociales</h5>
 
             <div class="iconsSocialNetworks"> <!-- BLOCK iconsSocialNetworks-->
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/github.png" alt="icon github" class="iconsSocialNetworks__image iconGithub"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/github.png" alt="icon github" class="iconsSocialNetworks__image iconGithub"></a>
                 
                 <!--<a href="#" target="_blank" class="iconsSocialNetworks__item"><img src="img/linkedin.png" alt="icon linkedin" class="iconsSocialNetworks__image iconLinkeding"></a>-->
 
-                <a href="#"class="iconsSocialNetworks__item"><img src="img/youtube.png" alt="icon youtube" class="iconsSocialNetworks__image iconYoutube"></a>
+                <a href="#"class="iconsSocialNetworks__item"><img src="./img/youtube.png" alt="icon youtube" class="iconsSocialNetworks__image iconYoutube"></a>
 
                 <a href="#" class="iconsSocialNetworks__item" ><img src="
                     img/facebook.png" alt="icon facebook" class="iconsSocialNetworks__image iconFacebook"></a>
 
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/twitter.png" alt="icon twitter" class="iconsSocialNetworks__image iconTwitter"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/twitter.png" alt="icon twitter" class="iconsSocialNetworks__image iconTwitter"></a>
 
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/instagram.png" alt="icon instagram" class="iconsSocialNetworks__image iconImstagram"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/instagram.png" alt="icon instagram" class="iconsSocialNetworks__image iconImstagram"></a>
 
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/whatsapp.png" alt="icon whatsapp" class="iconsSocialNetworks__image iconWhatsapp"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/whatsapp.png" alt="icon whatsapp" class="iconsSocialNetworks__image iconWhatsapp"></a>
             </div>
 
             <div class="main-modal">
@@ -140,9 +143,9 @@
         <div class="go-up"></div>
     </footer>
 
-    <script src="script/menu.js"></script>
-    <script src="script/modalBox.js"></script>
-    <script src="script/go-to-up.js"></script>
-    <script src="script/darkMode.js"></script>
+    <script src="./script/menu.js"></script>
+    <script src="./script/modalBox.js"></script>
+    <script src="./script/go-to-up.js"></script>
+    <script src="./script/darkMode.js"></script>
 </body>
 </html>
