--- a/curso_html5.html
+++ b/curso_html5.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta name="description" content="En este curso de HTML aprenderás los conceptos básicos para definir la estructura de tú sitio web y de las mejorás de la nueva versiòn.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="name" content="Hairton Mayhuay">
+    <meta name="copyright" content="Hairton M.">
     <title>Course > HTML @hairton</title>
 
     <!-- ESTILOS LINKS -->
 
-    <link rel="icon" href="img/iconPersonal.png">
-    <link rel="stylesheet" href="styles/generalStyle.css">
-    <link rel="stylesheet" href="styles/templateGrid.css">
+    <link rel="icon" href="./img/iconPersonal.png">
+    <link rel="stylesheet" href="./styles/generalStyle.css">
+    <link rel="stylesheet" href="./styles/templateGrid.css">
 
     <!-- GOOGLE FONTS -->
 
@@ -31,7 +34,7 @@
     <!-- BLOCK HEADER -->
 
     <header class="header">
-        <a href="index.html"><img class="header__image" src="img/cube2.png" alt="cubo one header"></a>
+        <a href="index.html"><img class="header__image" src="./img/cube2.png" alt="cubo one header"></a>
         <h1 class="header__title-principal">Hairton M.</h1>
     </header>
 
@@ -42,7 +45,7 @@
     <!-- BLOCK NAV -->
 
     <nav class="main-menu">
-        <p class="main-menu__switch"><img src="img/icon_plus_menu.svg" alt="icon switch menu" class="main-menu__icon"></p>
+        <p class="main-menu__switch"><img src="./img/icon_plus_menu.svg" alt="icon switch menu" class="main-menu__icon"></p>
 
         <ul class="menu-principal">
             <li class="menu-principal__item"><a class="menu-principal__link" href="index.html">Home</a></li>
@@ -57,7 +60,7 @@
     <div class="main-content">
         <section class="section">
             <article class="article">
-                <h3 class="article__title">CURSO DE HTML5</h3>
+                <h1 class="article__title">CURSO DE HTML5</h1>
 
                 <span class="article__intro">
                     <b class="font-bold">HTML5</b>, son un conjunto de tecnologias y <b class="font-bold">API's</b> que nos permiten hacer cosas grandiosas como dibujar en <b class="font-bold">2D y 3D.</b>
@@ -69,7 +72,7 @@
 
                 <div class="content-cards">
                     <div class="cards">
-                        <img class="cards__img" src="img/history_html.png" alt="image history of html">
+                        <img class="cards__img" src="./img/history_html.png" alt="image history of html">
                         <a class="cards__title" href="card-1-html5.html">La Historia de HTML</a>
                         <p class="cards__description">
                             HTML fue creado por Team Berners-Lee en el año 1991, cuando se encontraba trabajando en el CERN.
@@ -77,7 +80,7 @@
                     </div>
 
                     <div class="cards">
-                        <img class="cards__img" src="img/api_html_big.png" alt="API's HTML">
+                        <img class="cards__img" src="./img/api_html_big.png" alt="API's HTML">
                         <a class="cards__title" href="card-2-html5.html">HTML y sus API's</a>
                         <p class="cards__description">
                             La  nueva versiòn de HTML5 que fue presentada en el año 2015 trae nuevas API's como audio, video, entre otros.
@@ -85,7 +88,7 @@
                     </div>
 
                     <div class="cards">
-                        <img class="cards__img" src="img/structure_html.png" alt="estructura html">
+                        <img class="cards__img" src="./img/structure_html.png" alt="estructura html">
                         <a class="cards__title" href="card-3-html5.html">Estructura principal de HTML</a>
                         <p class="cards__description">
                             La esctructura principal de HTML nos permite, empezar a estructurar nuestra website.
@@ -93,7 +96,7 @@
                     </div>
 
                     <div class="cards">
-                        <img class="cards__img" src="img/tags_html.png" alt="tags html">
+                        <img class="cards__img" src="./img/tags_html.png" alt="tags html">
                         <a class="cards__title" href="card-4-html5.html">Los 10 tags necesarios en HTML</a>
                         <p class="cards__description">
                             HTML tiene tags <b class="font-bold">etiquetas</b>  que son muy importantes y necesarias al momento de estructurar nuestra website.
@@ -108,7 +111,7 @@
             <div class="aside-info">
                 <h4 class="aside-info__title">La Web</h4>
 
-                <img class="aside-info__img" src="img/web.png" alt="image of the Web">
+                <img class="aside-info__img" src="./img/web.png" alt="image of the Web">
 
                 <p class="paragraph paragraph--aside"> 
                     La web, muchos creen que es internet, pero la realidad es que <b class="font-bold font-bold--aside">internet</b> es la infraestructura sobre la cual esta la <b class="font-bold font-bold--aside">web</b>... 
@@ -135,20 +138,20 @@
             <h5 class="socialNetworks__title">Redes Sociales</h5>
 
             <div class="iconsSocialNetworks"> <!-- BLOCK iconsSocialNetworks-->
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/github.png" alt="icon github" class="iconsSocialNetworks__image iconGithub"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/github.png" alt="icon github" class="iconsSocialNetworks__image iconGithub"></a>
                 
                 <!--<a href="#" target="_blank" class="iconsSocialNetworks__item"><img src="img/linkedin.png" alt="icon linkedin" class="iconsSocialNetworks__image iconLinkeding"></a>-->
 
-                <a href="#"class="iconsSocialNetworks__item"><img src="img/youtube.png" alt="icon youtube" class="iconsSocialNetworks__image iconYoutube"></a>
+                <a href="#"class="iconsSocialNetworks__item"><img src="./img/youtube.png" alt="icon youtube" class="iconsSocialNetworks__image iconYoutube"></a>
 
                 <a href="#" class="iconsSocialNetworks__item" ><img src="
                     img/facebook.png" alt="icon facebook" class="iconsSocialNetworks__image iconFacebook"></a>
 
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/twitter.png" alt="icon twitter" class="iconsSocialNetworks__image iconTwitter"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/twitter.png" alt="icon twitter" class="iconsSocialNetworks__image iconTwitter"></a>
 
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/instagram.png" alt="icon instagram" class="iconsSocialNetworks__image iconImstagram"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/instagram.png" alt="icon instagram" class="iconsSocialNetworks__image iconImstagram"></a>
 
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/whatsapp.png" alt="icon whatsapp" class="iconsSocialNetworks__image iconWhatsapp"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/whatsapp.png" alt="icon whatsapp" class="iconsSocialNetworks__image iconWhatsapp"></a>
             </div>
 
             <div class="main-modal">
@@ -166,9 +169,9 @@
     </footer>
 
 
-    <script src="script/menu.js"></script>
-    <script src="script/modalBox.js"></script>
-    <script src="script/go-to-up.js"></script>
-    <script src="script/darkMode.js"></script>
+    <script src="./script/menu.js"></script>
+    <script src="./script/modalBox.js"></script>
+    <script src="./script/go-to-up.js"></script>
+    <script src="./script/darkMode.js"></script>
 </body>
 </html>
