--- a/info-author.html
+++ b/info-author.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta name="description" content="Hola Soy Hairton y en esta sección conocerás un poco más de mis (hobbies, estudios y proyectos).">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="name" content="Hairton Mayhuay">
+    <meta name="copyright" content="Hairton M.">
     <title>About Author | @hairton</title>
 
     <!-- ESTILOS LINKS -->
 
-    <link rel="icon" href="img/iconPersonal.png">
-    <link rel="stylesheet" href="styles/generalStyle.css">
-    <link rel="stylesheet" href="styles/templateGrid.css">
+    <link rel="icon" href="./img/iconPersonal.png">
+    <link rel="stylesheet" href="./styles/generalStyle.css">
+    <link rel="stylesheet" href="./styles/templateGrid.css">
 
     <!-- GOOGLE FONTS -->
 
@@ -31,7 +34,7 @@
     <!-- BLOCK HEADER -->
 
     <header class="header">
-        <a href="index.html"><img class="header__image" src="img/cube2.png" alt="cubo one header"></a>
+        <a href="index.html"><img class="header__image" src="./img/cube2.png" alt="cubo one header"></a>
         <h1 class="header__title-principal">Hairton M.</h1>
     </header>
 
@@ -42,7 +45,7 @@
     <!-- BLOCK NAV -->
 
     <nav class="main-menu">
-        <p class="main-menu__switch"><img src="img/icon_plus_menu.svg" alt="icon switch menu" class="main-menu__icon"></p>
+        <p class="main-menu__switch"><img src="./img/icon_plus_menu.svg" alt="icon switch menu" class="main-menu__icon"></p>
 
         <ul class="menu-principal">
             <li class="menu-principal__item"><a class="menu-principal__link" href="index.html">Home</a></li>
@@ -57,7 +60,7 @@
     <div class="main-content">
         <section class="section">
             <article class="article">
-               <h3 class="article__title">About me</h3>
+               <h1 class="article__title">About me</h1>
 
                <span class="article__intro">
                    En esta sección conocerán un poco más de mi, mis <b class="font-bold">estudios, hobbies y proyectos.</b>
@@ -89,20 +92,20 @@
             <h5 class="socialNetworks__title">Redes Sociales</h5>
 
             <div class="iconsSocialNetworks"> <!-- BLOCK iconsSocialNetworks-->
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/github.png" alt="icon github" class="iconsSocialNetworks__image iconGithub"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/github.png" alt="icon github" class="iconsSocialNetworks__image iconGithub"></a>
                 
                 <!--<a href="#" target="_blank" class="iconsSocialNetworks__item"><img src="img/linkedin.png" alt="icon linkedin" class="iconsSocialNetworks__image iconLinkeding"></a>-->
 
-                <a href="#"class="iconsSocialNetworks__item"><img src="img/youtube.png" alt="icon youtube" class="iconsSocialNetworks__image iconYoutube"></a>
+                <a href="#"class="iconsSocialNetworks__item"><img src="./img/youtube.png" alt="icon youtube" class="iconsSocialNetworks__image iconYoutube"></a>
 
                 <a href="#" class="iconsSocialNetworks__item" ><img src="
                     img/facebook.png" alt="icon facebook" class="iconsSocialNetworks__image iconFacebook"></a>
 
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/twitter.png" alt="icon twitter" class="iconsSocialNetworks__image iconTwitter"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/twitter.png" alt="icon twitter" class="iconsSocialNetworks__image iconTwitter"></a>
 
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/instagram.png" alt="icon instagram" class="iconsSocialNetworks__image iconImstagram"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/instagram.png" alt="icon instagram" class="iconsSocialNetworks__image iconImstagram"></a>
 
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/whatsapp.png" alt="icon whatsapp" class="iconsSocialNetworks__image iconWhatsapp"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="./img/whatsapp.png" alt="icon whatsapp" class="iconsSocialNetworks__image iconWhatsapp"></a>
             </div>
 
             <div class="main-modal">
