--- a/proyects.html
+++ b/proyects.html
@@ -79,15 +79,15 @@
                     </div>
                 </div>
             </article>
-        </section>./
+        </section>
 
         <aside class="aside">
             <div class="main-codes">
                 <div class="codes-img-aside">
-                    <img src="./img/blink_led_codigo_arduino.png" alt="codigo Arduino blink led" class="">
+                    <img src="./img/blink_led_codigo_arduino.png" alt="codigo Arduino blink led" class="codes-aside">
                 </div>
                 <div class="codes-img-aside">
-                    <img src="./img/blink_led_2_codigo_arduino.png" alt="codigo blink led II arduino" class="">
+                    <img src="./img/blink_led_2_codigo_arduino.png" alt="codigo blink led II arduino" class="codes-aside">
                 </div>
             </div>
         </aside>
