--- a/proyects.html
+++ b/proyects.html
@@ -84,10 +84,10 @@
         <aside class="aside">
             <div class="main-codes">
                 <div class="codes-img-aside">
-                    <img src="./img/blink_led_codigo_arduino.png" alt="codigo Arduino blink led" class="codes-aside">
+                    <img src="./img/blink_led_codigo_arduino.png" alt="codigo Arduino blink led" class="codes">
                 </div>
                 <div class="codes-img-aside">
-                    <img src="./img/blink_led_2_codigo_arduino.png" alt="codigo blink led II arduino" class="codes-aside">
+                    <img src="./img/blink_led_2_codigo_arduino.png" alt="codigo blink led II arduino" class="codes">
                 </div>
             </div>
         </aside>
